--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             background-color: #015a9c;
         }
 
+        .eshifa-form input {
+            padding-bottom: 40px;
+        }
+
         .eshifa-form input[type="search"] {
             padding-right: 40px;
         }
