--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 <div class="eshifa-form">
     <form action="#" method="post">
+        <h3 style="text-align: center">eShifa Home Lab Booking</h3>
         <label for="name">Patient Name:</label>
         <input type="text" id="name" name="patient_name" required>
 
