--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         }
 
         .eshifa-form input {
-            padding-bottom: 40px;
+            margin-bottom: 40px;
+        }
+
+        .eshifa-form input {
+            margin-bottom: 40px;
         }
 
         .eshifa-form input[type="search"] {
